# notifeed

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  __main__.py  config.py  config_template.json  feed.py  feed_object.py  notifeed.service  notifications.py  processor.py  pyproject.toml  requirements.txt  resp.bytes  setup.cfg  setup.py  utils.py
.vim/: coc-settings.json
notifeed/: __init__.py  __main__.py  cli.py  constants.py  db.py  enums.py  feeds.py  main.py  remote.py  structs.py  utils.py
notifeed/db/: __init__.py  base.py  channel.py  feed.py  notification.py  post.py  setting.py
notifeed/notifications/: __init__.py  base.py  discord.py  ntfy.py  slack.py
