[metadata]
name = notifeed
version = 1.0.0
author = Logan Swartzendruber
author_email = logan.swartzendruber@gmail.com
description = Automatically get notifications for new posts on your favorite RSS/Atom feeds.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/loganswartz/notifeed
classifiers =
	Programming Language :: Python :: 3.8
	Operating System :: POSIX :: Linux
	Operating System :: MacOS
	Environment :: Console
	Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary
	Topic :: Utilities

[options]
package_dir =
	= notifeed
packages = find:
python_requires = >=3.8
install_requires =
	aiohttp[speedups]
	atoma
	bs4
	click
	requests
	peewee

[options.packages.find]
where = notifeed

[options.entry_points]
console_scripts =
	notifeed = notifeed.cli:cli
