[metadata]
name = notifeed
version = 2.0.1
author = Logan Swartzendruber
author_email = logan.swartzendruber@gmail.com
description = Automatically get notifications for new posts on your favorite RSS/Atom feeds.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/loganswartz/notifeed
classifiers =
    Programming Language :: Python :: 3.8
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Environment :: Console
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.8
install_requires =
    aiohttp[speedups]
    appdirs
    atoma
    bs4
    click >= 8.0.0
    requests
    peewee
    faker
    pre-commit

[options.entry_points]
console_scripts =
    notifeed = notifeed.cli:cli
